--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -56,7 +56,7 @@
     </ul>
 
     <div class="d-flex align-items-center mt-auto">
-      <img src="/assets/images/andychen-sm.jpeg" alt="andychen_photo" class="rounded-circle photo me-3">
+      <img src="./assets/images/andychen-sm.jpeg" alt="andychen_photo" class="rounded-circle photo me-3">
         <ul class="list-unstyled mb-0">
           <li class="fw-bold mb-1">Andy Chen</li>
           <li class="fz-14 text-muted">andy0401@mail.com</li>
