--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -21,7 +21,7 @@
 <body>
   <aside class="bg-light">
     <nav class="d-flex flex-column h-100">
-    <h1><a href="#" class="logo mb-3">ANSWER</a></h1>
+    <h1><a href="./index.html" class="logo mb-3">ANSWER</a></h1>
     <ul class="nav flex-column fw-bold">
       <li class="nav-item mb-2">
         <a class="nav-link link-dark ps-0" href="#"><span class="material-symbols-rounded me-3 align-middle">
